--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,16 @@
 language: scala
-scala:
-   - 2.12.3
+sudo: required
+dist: trusty
+group: edge
+
+matrix:
+  include:
+    - jdk: oraclejdk8
+      scala: 2.12.3
+      env: COMMAND=ci-all PUBLISH=true
+
+script:
+  - sbt -J-Xmx6144m ++$TRAVIS_SCALA_VERSION $COMMAND
+
+after_success:
+  - ./project/publish
